Esta clase vimos como añadir favicon , el uso del plugin Emmet y su forma abreviada de trabajo y la etiqueta details/summary

--- a/about.html
+++ b/about.html
@@ -15,7 +15,9 @@
 			</div>
 			<div class="header__content">
 				<h1 class="header__title">
-					<a href="index.html">Projex S.A</a>
+					<a href="index.html">
+						<img src="images/logo.svg" alt="Projex S.A">
+					</a>
 				</h1>
 				<nav>
 					<ul class="menu">
