--- a/index.html
+++ b/index.html
@@ -23,89 +23,84 @@
 				</h1>
 				<nav>
 					<ul class="menu">
-						<li class="menu__item"><a href="index.html" class="menu__link">Inicio</a></li>
-						<li class="menu__item"><a href="about.html" class="menu__link">Sobre mi</a></li>
-						<li class="menu__item"><a href="projects.html" class="menu__link">Proyectos</a>
-							<ul class="submenu">
-								<li><a href="#" class="menu__link">Proyectos Tecnológicos</a></li>
-								<li><a href="#" class="menu__link">Proyectos Sociales</a></li>
-							</ul>	
-						</li>
-						<li class="menu__item"><a href="contact.html" class="menu__link">Contacto</a></li>
+						<li class="menu__item"><a href="#intro" class="menu__link">Intro</a></li>
+						<li class="menu__item"><a href="#nosotros" class="menu__link">Nosotros</a></li>
+						<li class="menu__item"><a href="#galeria" class="menu__link">Galeria</a></li>
+						<li class="menu__item"><a href="#contacto" class="menu__link">Contacto</a></li>
 					</ul>
 				</nav>	
 			</div>
 		</header>
-		<img src="images/hondita.gif" alt="E. Honda Animado">
-		<img src="images/hondita.gif" alt="E. Honda Animado">
-		<img src="images/hondita.gif" alt="E. Honda Animado">
-		<img src="images/hondita.gif" alt="E. Honda Animado">
-		<img src="images/hondita.gif" alt="E. Honda Animado">
-		
-		<h1>Proy<br>ex</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed officia nihil dolore omnis incidunt eaque commodi odit minus beatae dicta tenetur porro nobis architecto perferendis, corrupti aliquam, nisi repellendus asperiores!</p>
-		<h2>Proyex</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, similique animi nam molestiae odio cumque hic dolor consequuntur ad aliquid tempora adipisci commodi possimus, deserunt ut quam, eius eaque, voluptates.</p>
-		<h3>Proyex</h3>
-		<p>otro párrafo.</p>
-		<h4>Proyex</h4>
-		<h5>Proyex</h5>
-		<h6>Proyex</h6>
-		<p>Holi soy un <strong>párrafo</strong>.</p>
-		<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Neque iste laudantium fugiat suscipit ad ullam commodi labore voluptatibus mollitia repellendus facere, rerum ipsam facilis consequuntur doloremque animi quibusdam odio vel.</p>
-		<p>Soy un parrafito.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias placeat nemo, obcaecati non voluptatum nostrum, maxime minus amet nobis officiis quas ad eligendi. Eos ratione eum qui tempore esse!</p>
-		<a href="https://youtube.com">Ir a Yoooooosutube</a>
-		<a href="about.html">Conóceme</a><br><br><br><br><br><br><br>
-		<img src="images/honda.webp" alt="Edmond Honda">
-		<h2>Mi día<br> de la Semana</h2>
-		<ol>
-			<li>Hacer Ejercicios</li>
-			<li>Bañarme</li>
-			<li>Desayunar</li>	
-			<li>Trabajar</li>
-			<li>Almuerzo</li>
-			<li>Seguir Trabajando</li>
-			<li>Clases</li>
-			<li>Cena</li>
-			<li>Jugar</li>
-			<li>Dormir</li>
-		</ol>
-		<h2>Mis Platos <span>Favoritos</span>:</h2>
-		<div>
-			<ul>
-				<li>Pollo a la Brasa</li>
-				<li>Ceviche</li>
-				<li>Tallarines rojos con papa <strong>huancaina</strong></li>
-				<li>Chicharrones de Calamar</li>
-			</ul>
-		</div>
-		<table>
-			<thead>
-				<tr>
-					<th>Nombre</th>
-					<th>Télefono</th>
-					<th>Email</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Gabriela</td>
-					<td>999 876 456</td>
-					<td>gabriela@gmail.com</td>
-				</tr>
-				<tr>
-					<td>Melany</td>
-					<td>956 456 344</td>
-					<td>melany@yahoo.es</td>
-				</tr>
-				<tr>
-					<td>Alejandro</td>
-					<td>976 456 333</td>
-					<td>alejandro@latinmail.com</td>
-				</tr>
-			</tbody>
-		</table>
+
+		<main>
+			<section class="hero" id="intro">	
+				<div class="hero__content">
+					<div class="hero__text">
+						<h2 class="hero__title">Intro</h2>
+						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
+						<a href="#" class="hero__btn">Call to Action</a>
+					</div>
+					<div class="hero__media">
+						<img src="images/honda.webp" alt="E. Honda" class="hero__img">
+					</div>
+				</div>
+			</section>
+
+			<section class="hero" id="nosotros">	
+				<div class="hero__content">
+					<div class="hero__text">
+						<h2 class="hero__title">Nosotros</h2>
+						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
+						<a href="#" class="hero__btn">Call to Action</a>
+					</div>
+					<div class="hero__media">
+						<img src="images/honda.webp" alt="E. Honda" class="hero__img">
+					</div>
+				</div>
+			</section>
+
+			<section class="hero" id="galeria">	
+				<div class="hero__content">
+					<div class="hero__text">
+						<h2 class="hero__title">Galería</h2>
+						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
+						<a href="#" class="hero__btn">Call to Action</a>
+					</div>
+					<div class="hero__media">
+						<img src="images/honda.webp" alt="E. Honda" class="hero__img">
+					</div>
+				</div>
+			</section>
+
+			<section class="hero" id="contacto">	
+				<div class="hero__content">
+					<div class="hero__text">
+						<h2 class="hero__title">Contacto</h2>
+						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
+						<a href="#" class="hero__btn">Call to Action</a>
+					</div>
+					<div class="hero__media">
+						<img src="images/honda.webp" alt="E. Honda" class="hero__img">
+					</div>
+				</div>
+			</section>
+			<!--
+			<article class="productito">
+				<div class="productito__text">
+					<h2>Producto 1</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis magnam doloribus, neque placeat ea, eveniet.</p>
+				</div>
+				<div class="productito__media">
+					<img src="images/honda.webp" alt="Edmond Honda">
+				</div>
+			</article>
+			-->
+
+		</main>
+		<footer>
+			
+		</footer>
+
 
 	</body>
 </html>
