Añadimos un formulario de busqueda en el Header, también algunos botones en los Hero, así también reforzamos la técnica flexbox para la diagramación

--- a/index.html
+++ b/index.html
@@ -21,24 +21,34 @@
 						<img src="images/logo.svg" alt="Projex S.A">
 					</a>
 				</h1>
-				<nav>
+				<nav class="header__navigation">
 					<ul class="menu">
-						<li class="menu__item"><a href="#intro" class="menu__link">Intro</a></li>
+						<li class="menu__item"><a href="#inicio" class="menu__link">Intro</a></li>
 						<li class="menu__item"><a href="#nosotros" class="menu__link">Nosotros</a></li>
 						<li class="menu__item"><a href="#galeria" class="menu__link">Galeria</a></li>
 						<li class="menu__item"><a href="#contacto" class="menu__link">Contacto</a></li>
 					</ul>
+					<form action="" class="header__form">
+						<label for="search" class="header__label">Buscar:</label>
+						<input type="search" id="search" class="header__field" placeholder="Buscar:">
+						<button class="header__button"><img src="images/lupa.png" alt="Lupa" width="20"></button>
+					</form>
 				</nav>	
 			</div>
 		</header>
 
 		<main>
-			<section class="hero" id="intro">	
+			<section class="hero" id="inicio">	
 				<div class="hero__content">
 					<div class="hero__text">
 						<h2 class="hero__title">Intro</h2>
 						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
 						<a href="#" class="hero__btn">Call to Action</a>
+
+						<div class="hero__options">
+							<button class="hero__favorite">Añadir a Favorito</button>
+							<a href="https://facebook.com" class="hero__share">Compartir en Facebook</a>
+						</div>
 					</div>
 					<div class="hero__media">
 						<img src="images/honda.webp" alt="E. Honda" class="hero__img">
@@ -50,7 +60,7 @@
 				<div class="hero__content">
 					<div class="hero__text">
 						<h2 class="hero__title">Nosotros</h2>
-						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
+						<p>Lorem, ipsum dolor</p>
 						<a href="#" class="hero__btn">Call to Action</a>
 					</div>
 					<div class="hero__media">
@@ -63,7 +73,7 @@
 				<div class="hero__content">
 					<div class="hero__text">
 						<h2 class="hero__title">Galería</h2>
-						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
+						<p>Lorem, ipsum dolor, sit amet consectetur.</p>
 						<a href="#" class="hero__btn">Call to Action</a>
 					</div>
 					<div class="hero__media">
@@ -76,7 +86,7 @@
 				<div class="hero__content">
 					<div class="hero__text">
 						<h2 class="hero__title">Contacto</h2>
-						<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Quaerat aliquam reiciendis eligendi molestiae, facilis voluptate ad, odit nesciunt deleniti consequatur quibusdam sunt praesentium. At facilis, magni dolorum? Laborum, quis, sunt.</p>
+						<p>Lorem</p>
 						<a href="#" class="hero__btn">Call to Action</a>
 					</div>
 					<div class="hero__media">
