Test for IOS v2

--- a/test-nobu.html
+++ b/test-nobu.html
@@ -8,6 +8,8 @@
 		nav{
 			padding: 10px;
 			overflow: auto;
+			position: sticky;
+			top: 0;
 		}
 		nav ul{
 			display: flex;
@@ -19,7 +21,7 @@
 
 		nav li{
 			max-width: 50%;
-			min-width: 200px;
+			min-width: 150px;
 		}
 
 		nav a{
@@ -29,6 +31,9 @@
 			background-color: #000;
 			color: #fff;
 			text-align: center;
+		}
+		section{
+			padding: 10px;
 		}
 	</style>
 </head>
@@ -43,5 +48,70 @@
 			<li><a href="#">Enlace 6</a></li>
 		</ul>
 	</nav>
+	<section>
+		<h1>Seccion 1</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ipsum illum modi, beatae nobis veniam doloribus minima ratione obcaecati ipsa! Temporibus omnis adipisci suscipit alias, impedit eaque excepturi est voluptatum.</p>
+		<p>Animi, temporibus! Suscipit perspiciatis voluptas laboriosam alias dolorem natus ipsum consequuntur dolor sint porro. Ipsum rem aut reiciendis culpa omnis sed, maxime qui aspernatur quas sint quo odio accusantium architecto?</p>
+		<p>Porro sequi, culpa eius. Fugit laborum exercitationem voluptates cum asperiores officiis dolorum commodi, ipsum molestias veniam dolorem omnis natus voluptatum. Explicabo fuga accusantium, minus maxime nobis soluta labore, aliquam non!</p>
+		<p>Ut obcaecati dolorem eum nobis eligendi explicabo neque magnam doloremque qui dolore, excepturi esse quam numquam voluptates fugit ad suscipit perferendis dignissimos nostrum provident cupiditate, saepe. Repellat, autem modi sapiente.</p>
+		<p>Dicta ea incidunt facilis repellendus animi, illo dignissimos quibusdam vel aliquam voluptatem neque magni, saepe cum in. Dolor, eos reprehenderit. Sequi, soluta ipsum dolorum nobis accusantium tempore provident accusamus error?</p>
+		<p>At, perspiciatis, adipisci. Neque nam voluptatum magnam necessitatibus laboriosam natus possimus ad. Expedita, sint, alias. Quod, nihil saepe minus. Laboriosam, fuga veniam accusantium sit maiores dolores totam sapiente eius earum.</p>
+		<p>Animi eos omnis laudantium eaque reprehenderit enim, voluptates atque vero beatae necessitatibus praesentium libero quo repudiandae unde molestiae laboriosam, soluta ipsam adipisci a, repellendus quisquam cupiditate, distinctio qui neque inventore?</p>
+		<p>Debitis itaque facilis veniam molestiae animi, sunt sit laboriosam, doloremque necessitatibus voluptatum eum, quibusdam officiis assumenda cumque saepe odit adipisci sint aliquam pariatur ullam quae, magni ab amet tempora possimus?</p>
+		<p>Eius fugit ipsa, aspernatur ut necessitatibus in? Maxime blanditiis quibusdam iusto earum quaerat cupiditate doloribus harum et quisquam temporibus, exercitationem possimus voluptas dolorum dicta deleniti laudantium labore natus obcaecati inventore!</p>
+		<p>Culpa ipsam eaque impedit qui quae, explicabo incidunt, enim, mollitia quibusdam provident, itaque earum eveniet vero sunt aspernatur ipsa. Temporibus, neque! Debitis veniam sequi, at corrupti ratione deserunt commodi saepe.</p>
+	</section>
+	<section>
+		<h1>Seccion 1</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ipsum illum modi, beatae nobis veniam doloribus minima ratione obcaecati ipsa! Temporibus omnis adipisci suscipit alias, impedit eaque excepturi est voluptatum.</p>
+		<p>Animi, temporibus! Suscipit perspiciatis voluptas laboriosam alias dolorem natus ipsum consequuntur dolor sint porro. Ipsum rem aut reiciendis culpa omnis sed, maxime qui aspernatur quas sint quo odio accusantium architecto?</p>
+		<p>Porro sequi, culpa eius. Fugit laborum exercitationem voluptates cum asperiores officiis dolorum commodi, ipsum molestias veniam dolorem omnis natus voluptatum. Explicabo fuga accusantium, minus maxime nobis soluta labore, aliquam non!</p>
+		<p>Ut obcaecati dolorem eum nobis eligendi explicabo neque magnam doloremque qui dolore, excepturi esse quam numquam voluptates fugit ad suscipit perferendis dignissimos nostrum provident cupiditate, saepe. Repellat, autem modi sapiente.</p>
+		<p>Dicta ea incidunt facilis repellendus animi, illo dignissimos quibusdam vel aliquam voluptatem neque magni, saepe cum in. Dolor, eos reprehenderit. Sequi, soluta ipsum dolorum nobis accusantium tempore provident accusamus error?</p>
+		<p>At, perspiciatis, adipisci. Neque nam voluptatum magnam necessitatibus laboriosam natus possimus ad. Expedita, sint, alias. Quod, nihil saepe minus. Laboriosam, fuga veniam accusantium sit maiores dolores totam sapiente eius earum.</p>
+		<p>Animi eos omnis laudantium eaque reprehenderit enim, voluptates atque vero beatae necessitatibus praesentium libero quo repudiandae unde molestiae laboriosam, soluta ipsam adipisci a, repellendus quisquam cupiditate, distinctio qui neque inventore?</p>
+		<p>Debitis itaque facilis veniam molestiae animi, sunt sit laboriosam, doloremque necessitatibus voluptatum eum, quibusdam officiis assumenda cumque saepe odit adipisci sint aliquam pariatur ullam quae, magni ab amet tempora possimus?</p>
+		<p>Eius fugit ipsa, aspernatur ut necessitatibus in? Maxime blanditiis quibusdam iusto earum quaerat cupiditate doloribus harum et quisquam temporibus, exercitationem possimus voluptas dolorum dicta deleniti laudantium labore natus obcaecati inventore!</p>
+		<p>Culpa ipsam eaque impedit qui quae, explicabo incidunt, enim, mollitia quibusdam provident, itaque earum eveniet vero sunt aspernatur ipsa. Temporibus, neque! Debitis veniam sequi, at corrupti ratione deserunt commodi saepe.</p>
+	</section>
+	<section>
+		<h1>Seccion 2</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ipsum illum modi, beatae nobis veniam doloribus minima ratione obcaecati ipsa! Temporibus omnis adipisci suscipit alias, impedit eaque excepturi est voluptatum.</p>
+		<p>Animi, temporibus! Suscipit perspiciatis voluptas laboriosam alias dolorem natus ipsum consequuntur dolor sint porro. Ipsum rem aut reiciendis culpa omnis sed, maxime qui aspernatur quas sint quo odio accusantium architecto?</p>
+		<p>Porro sequi, culpa eius. Fugit laborum exercitationem voluptates cum asperiores officiis dolorum commodi, ipsum molestias veniam dolorem omnis natus voluptatum. Explicabo fuga accusantium, minus maxime nobis soluta labore, aliquam non!</p>
+		<p>Ut obcaecati dolorem eum nobis eligendi explicabo neque magnam doloremque qui dolore, excepturi esse quam numquam voluptates fugit ad suscipit perferendis dignissimos nostrum provident cupiditate, saepe. Repellat, autem modi sapiente.</p>
+		<p>Dicta ea incidunt facilis repellendus animi, illo dignissimos quibusdam vel aliquam voluptatem neque magni, saepe cum in. Dolor, eos reprehenderit. Sequi, soluta ipsum dolorum nobis accusantium tempore provident accusamus error?</p>
+		<p>At, perspiciatis, adipisci. Neque nam voluptatum magnam necessitatibus laboriosam natus possimus ad. Expedita, sint, alias. Quod, nihil saepe minus. Laboriosam, fuga veniam accusantium sit maiores dolores totam sapiente eius earum.</p>
+		<p>Animi eos omnis laudantium eaque reprehenderit enim, voluptates atque vero beatae necessitatibus praesentium libero quo repudiandae unde molestiae laboriosam, soluta ipsam adipisci a, repellendus quisquam cupiditate, distinctio qui neque inventore?</p>
+		<p>Debitis itaque facilis veniam molestiae animi, sunt sit laboriosam, doloremque necessitatibus voluptatum eum, quibusdam officiis assumenda cumque saepe odit adipisci sint aliquam pariatur ullam quae, magni ab amet tempora possimus?</p>
+		<p>Eius fugit ipsa, aspernatur ut necessitatibus in? Maxime blanditiis quibusdam iusto earum quaerat cupiditate doloribus harum et quisquam temporibus, exercitationem possimus voluptas dolorum dicta deleniti laudantium labore natus obcaecati inventore!</p>
+		<p>Culpa ipsam eaque impedit qui quae, explicabo incidunt, enim, mollitia quibusdam provident, itaque earum eveniet vero sunt aspernatur ipsa. Temporibus, neque! Debitis veniam sequi, at corrupti ratione deserunt commodi saepe.</p>
+	</section>
+	<section>
+		<h1>Seccion 3</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ipsum illum modi, beatae nobis veniam doloribus minima ratione obcaecati ipsa! Temporibus omnis adipisci suscipit alias, impedit eaque excepturi est voluptatum.</p>
+		<p>Animi, temporibus! Suscipit perspiciatis voluptas laboriosam alias dolorem natus ipsum consequuntur dolor sint porro. Ipsum rem aut reiciendis culpa omnis sed, maxime qui aspernatur quas sint quo odio accusantium architecto?</p>
+		<p>Porro sequi, culpa eius. Fugit laborum exercitationem voluptates cum asperiores officiis dolorum commodi, ipsum molestias veniam dolorem omnis natus voluptatum. Explicabo fuga accusantium, minus maxime nobis soluta labore, aliquam non!</p>
+		<p>Ut obcaecati dolorem eum nobis eligendi explicabo neque magnam doloremque qui dolore, excepturi esse quam numquam voluptates fugit ad suscipit perferendis dignissimos nostrum provident cupiditate, saepe. Repellat, autem modi sapiente.</p>
+		<p>Dicta ea incidunt facilis repellendus animi, illo dignissimos quibusdam vel aliquam voluptatem neque magni, saepe cum in. Dolor, eos reprehenderit. Sequi, soluta ipsum dolorum nobis accusantium tempore provident accusamus error?</p>
+		<p>At, perspiciatis, adipisci. Neque nam voluptatum magnam necessitatibus laboriosam natus possimus ad. Expedita, sint, alias. Quod, nihil saepe minus. Laboriosam, fuga veniam accusantium sit maiores dolores totam sapiente eius earum.</p>
+		<p>Animi eos omnis laudantium eaque reprehenderit enim, voluptates atque vero beatae necessitatibus praesentium libero quo repudiandae unde molestiae laboriosam, soluta ipsam adipisci a, repellendus quisquam cupiditate, distinctio qui neque inventore?</p>
+		<p>Debitis itaque facilis veniam molestiae animi, sunt sit laboriosam, doloremque necessitatibus voluptatum eum, quibusdam officiis assumenda cumque saepe odit adipisci sint aliquam pariatur ullam quae, magni ab amet tempora possimus?</p>
+		<p>Eius fugit ipsa, aspernatur ut necessitatibus in? Maxime blanditiis quibusdam iusto earum quaerat cupiditate doloribus harum et quisquam temporibus, exercitationem possimus voluptas dolorum dicta deleniti laudantium labore natus obcaecati inventore!</p>
+		<p>Culpa ipsam eaque impedit qui quae, explicabo incidunt, enim, mollitia quibusdam provident, itaque earum eveniet vero sunt aspernatur ipsa. Temporibus, neque! Debitis veniam sequi, at corrupti ratione deserunt commodi saepe.</p>
+	</section>
+	<section>
+		<h1>Seccion 4</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ipsum illum modi, beatae nobis veniam doloribus minima ratione obcaecati ipsa! Temporibus omnis adipisci suscipit alias, impedit eaque excepturi est voluptatum.</p>
+		<p>Animi, temporibus! Suscipit perspiciatis voluptas laboriosam alias dolorem natus ipsum consequuntur dolor sint porro. Ipsum rem aut reiciendis culpa omnis sed, maxime qui aspernatur quas sint quo odio accusantium architecto?</p>
+		<p>Porro sequi, culpa eius. Fugit laborum exercitationem voluptates cum asperiores officiis dolorum commodi, ipsum molestias veniam dolorem omnis natus voluptatum. Explicabo fuga accusantium, minus maxime nobis soluta labore, aliquam non!</p>
+		<p>Ut obcaecati dolorem eum nobis eligendi explicabo neque magnam doloremque qui dolore, excepturi esse quam numquam voluptates fugit ad suscipit perferendis dignissimos nostrum provident cupiditate, saepe. Repellat, autem modi sapiente.</p>
+		<p>Dicta ea incidunt facilis repellendus animi, illo dignissimos quibusdam vel aliquam voluptatem neque magni, saepe cum in. Dolor, eos reprehenderit. Sequi, soluta ipsum dolorum nobis accusantium tempore provident accusamus error?</p>
+		<p>At, perspiciatis, adipisci. Neque nam voluptatum magnam necessitatibus laboriosam natus possimus ad. Expedita, sint, alias. Quod, nihil saepe minus. Laboriosam, fuga veniam accusantium sit maiores dolores totam sapiente eius earum.</p>
+		<p>Animi eos omnis laudantium eaque reprehenderit enim, voluptates atque vero beatae necessitatibus praesentium libero quo repudiandae unde molestiae laboriosam, soluta ipsam adipisci a, repellendus quisquam cupiditate, distinctio qui neque inventore?</p>
+		<p>Debitis itaque facilis veniam molestiae animi, sunt sit laboriosam, doloremque necessitatibus voluptatum eum, quibusdam officiis assumenda cumque saepe odit adipisci sint aliquam pariatur ullam quae, magni ab amet tempora possimus?</p>
+		<p>Eius fugit ipsa, aspernatur ut necessitatibus in? Maxime blanditiis quibusdam iusto earum quaerat cupiditate doloribus harum et quisquam temporibus, exercitationem possimus voluptas dolorum dicta deleniti laudantium labore natus obcaecati inventore!</p>
+		<p>Culpa ipsam eaque impedit qui quae, explicabo incidunt, enim, mollitia quibusdam provident, itaque earum eveniet vero sunt aspernatur ipsa. Temporibus, neque! Debitis veniam sequi, at corrupti ratione deserunt commodi saepe.</p>
+	</section>
 </body>
 </html>
