En esta clase se explicó el uso de las Media Queries para hacer una web responsive

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 						<img src="images/logo.svg" alt="Projex S.A">
 					</a>
 				</h1>
+				<button class="header__burger">
+					Menu
+				</button>
 				<nav class="header__navigation">
 					<ul class="menu">
 						<li class="menu__item"><a href="#inicio" class="menu__link">Intro</a></li>
