--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<!-- se puede incluir varias etiquetas meta -->
 		<meta charset="UTF-8">
 		<!-- lo que coloque dentro de la etiqueta title se mostrará en la pestaña del navegador -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Proyex - Consultora en TICs</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +23,9 @@
 					</a>
 				</h1>
 				<button class="header__burger">
-					Menu
+					<span></span>
+					<span></span>
+					<span></span>
 				</button>
 				<nav class="header__navigation">
 					<ul class="menu">
@@ -128,7 +131,6 @@
 		<footer>
 			
 		</footer>
-
-
+		<script src="js/app.js"></script>
 	</body>
 </html>
