--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<header class="header">
 			<div class="oferta oferta--especial">
-				<a href="#" class="oferta__link">Ofertas del 50% por Semana Santa</a>
+				<a href="#" class="oferta__link" data-color="#00f">Ofertas del 50% por Semana Santa</a>
 			</div>
 			<div class="header__content">
 				<h1 class="header__title">
@@ -131,6 +131,12 @@
 		<footer>
 			
 		</footer>
+		<div class="modal">
+			<div class="modal__content">
+			</div>
+			<button class="modal__btn">Cerrar</button>
+		</div>
 		<script src="js/app.js"></script>
+		<script src="js/variables.js"></script>
 	</body>
 </html>
